--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,10 @@ isolated_build = true
 deps =
     check-manifest >= 0.42
     pytest
+    tensorflow >= 2.6
+    numpy
+    scipy
 commands =
-    check-manifest --ignore 'tox.ini,tests/**,.editorconfig,vscode.env,.vscode/**'
+    check-manifest --ignore 'tox.ini,tests/*.py,.editorconfig,vscode.env,.vscode/**'
     python setup.py check -m -s
-    pytest tests {posargs}
+    pytest -s tests {posargs}
