Add AutoClipper to clip gradients, when gradient is exploding

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps =
     tensorflow >= 2.6
     numpy
     scipy
+    tensorflow_probability
 commands =
     check-manifest --ignore 'tox.ini,tests/*.py,.editorconfig,vscode.env,.vscode/**'
     python setup.py check -m -s
