--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=46.4.0", "wheel", "numpy", "scipy", "tensorflow"]
+requires = ["setuptools>=46.4.0", "wheel", "numpy", "scipy", "tensorflow", "tensorflow_probability"]
 build-backend = "setuptools.build_meta"
